# hoa-prServer

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/hoa_prserver/: __main__.py  app.py  auth.py  db.py  emailer.py  github_client.py  pr_flow.py  render.py  settings.py  toml_ops.py  toml_summary.py  toml_templates.py
web/: app.js  index.html  style.css
