[project]
name = "hoa-prserver"
version = "0.1.0"
description = "JSON API server for automated PR workflows (QQ bot + web)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "httpx>=0.27.0",
]

[project.scripts]
hoa-prserver = "hoa_prserver.__main__:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
